fixed tiny alignment issue that would have drove me crazy

--- a/style.css
+++ b/style.css
@@ -200,9 +200,8 @@ label {
 }
 
 .fa-book {
+    transform: translate(-5px, 120px);
 
-    transform: translateY(120px);
-    padding-right: 5px;
 }
 
 .submit:hover {
@@ -213,7 +212,7 @@ label {
 textarea {
     width: 300px;
     padding: 20px;
-    transform: translateX(45px);
+    transform: translateX(30px);
 }
 
 
